--- a/index.html
+++ b/index.html
@@ -329,6 +329,36 @@
 
           <div class="row mt-2 mb-4">
             <div class="col-sm text-center">
+              <img src="imgs/people/022_keating.jpg" width="200" alt="Neal Keating" class="img-thumbnail">
+              <br>
+              Neal Keating
+              <br>
+              PhD Student
+              <br>
+            </div>
+
+            <div class="col-sm text-center">
+              <img src="imgs/people/017_ruining.jpg" width="200" alt="Ruining Yang" class="img-thumbnail">
+              <br>
+              Ruining Yang
+              <br>
+              MS Student
+              <br>
+            </div>
+            <div class="col-sm text-center">
+              <img src="imgs/people/006_irwin.jpg" width="200" alt="Irwin Reyes" class="img-thumbnail">
+              <br>
+              <a href="https://irwinreyes.com/">Irwin Reyes</a>
+              <br>
+              Visiting Scholar
+              <br>
+              <em>"Fixer"</em>
+            </div>
+
+          </div>
+
+          <div class="row mt-2 mb-4">
+            <div class="col-sm text-center">
               <img src="imgs/people/014_miles.jpg" width="200" alt="Miles Grant" class="img-thumbnail">
               <br>
               Miles Grant
@@ -345,16 +375,6 @@
               Undergraduate
               <br>
             </div>
-
-            <div class="col-sm text-center">
-              <img src="imgs/people/018_marlee.jpg" width="200" alt="Marlee Alvino" class="img-thumbnail">
-              <br>
-              Marlee Alvino
-              <br>
-              Undergraduate
-              </br>
-            </div>
-
             <div class="col-sm text-center">
               <img src="imgs/people/017_daniel.jpg" width="200" alt="Daniel Fisher" class="img-thumbnail">
               <br>
@@ -365,9 +385,6 @@
 
             </div>
 
-          </div>
-
-          <div class="row mt-2 mb-4">
             <div class="col-sm text-center">
               <img src="imgs/people/019_victoria.jpg" width="200" alt="Victoria Hennemann" class="img-thumbnail">
               <br>
@@ -377,87 +394,31 @@
               <br>
             </div>
 
+          </div>
+          <div class="row mt-2 mb-4">
             <div class="col-sm text-center">
-              <img src="imgs/people/020_kayla.jpg" width="200" alt="Kayla Berne" class="img-thumbnail">
+              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Eddie Cossic" class="img-thumbnail">
               <br>
-              Kayla Berne
+              Eddie Cossic
               <br>
               Undergraduate
               <br>
             </div>
 
-            <div class="col-sm text-center">
-              <img src="imgs/people/017_ruining.jpg" width="200" alt="Ruining Yang" class="img-thumbnail">
+          <div class="col-sm text-center">
+              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Leo Phan" class="img-thumbnail">
               <br>
-              Ruining Yang
+              Leo Phan
               <br>
-              MS Student
+              Undergraduate
               <br>
-            </div>
-            <div class="col-sm text-center">
-              <img src="imgs/people/022_keating.jpg" width="200" alt="Neal Keating" class="img-thumbnail">
-              <br>
-              Neal Keating
-              <br>
-              PhD Student
-              <br>
-            </div>
-               
           </div>
-
-          </div>
-          <div class="row mt-2 mb-4">
-            <div class="col-sm text-center">
-              <img src="imgs/people/006_irwin.jpg" width="200" alt="Irwin Reyes" class="img-thumbnail">
+          <div class="col-sm text-center">
+              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Viraj Prakash" class="img-thumbnail">
               <br>
-              <a href="https://irwinreyes.com/">Irwin Reyes</a>
+              Viraj Prakash
               <br>
-              External Collaborator
-              <br>
-              <em>"Fixer"</em>
-            </div>
-
-            <div class="col-sm text-center">
-              <img src="imgs/people/007_max.jpg" width="200" alt="Maximllian Golla" class="img-thumbnail">
-              <br>
-              Maximilian Golla
-              <br>
-              External Collaborator
-              <br>
-              <em>Survey Guru</em>
-            </div>
-            <div class="col-sm text-center">
-              <img src="imgs/people/008_philipp.jpg" width="200" alt="Philipp Markert" class="img-thumbnail">
-              <br>
-              Philipp Markert
-              <br>
-              External Collaborator
-              <br>
-            </div>
-
-            <div class="col-sm text-center">
-              <img src="imgs/people/012_florian.jpg" width="200" alt="Florian Farke" class="img-thumbnail">
-              <br>
-              Florian Farke
-              <br>
-              External Collaborator
-              <br>
-            </div>
-            <div class="col-sm text-center">
-              <img src="imgs/people/009_peter.jpg" width="200" alt="Peter Mayer" class="img-thumbnail">
-              <br>
-              Peter Mayer
-              <br>
-              External Collaborator
-              <br>
-              <em>Postdoc in abstentia</em>
-            </div>
-            <div class="col-sm text-center">
-              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Dominik Wermke" class="img-thumbnail">
-              <br>
-              Dominik Wermke
-              <br>
-              External Collaborator
+              Undergraduate
               <br>
             </div>
 
@@ -468,28 +429,11 @@
           <div class="container external-lab">
             <h3>External Lab Collaborations</h3>
             <ul>
-              <li><a href="https://push.umbc.edu">PUSH Group: Privacy & Usable Security Human-centered Computing</a> at
-                University of Maryland, Baltimore County (UMD)</li>
-              <ul>
-                <li>Ravi Kuber</li>
-                <li>Hirak Rey (Graduate May 2022)</li>
-                <li>Flynn Wolf (Graduated May 2020)</li>
-              </ul>
-              <li>Security, Privacy, People lab (SP2) at University of Maryland, College Park (UMD)</li>
-              <ul>
-                <li>Michelle Mazurek</li>
-                <li>Noel Wartford</li>
-              </ul>
-              <li> Security Privacy Interaction Lab at the University of Michigan (UM) </li>
-              <ul>
-                <li> Florian Schaub </li>
-                <li> Yixin Zou </li>
-              </ul>
-              <li> <a href="https://seclab.cs.georgetown.edu/">Georgetown SecLab</a></li>
-              <ul>
-                <li> Micah Sherr </li>
-                <li> Rahel Fainchtein </li>
-              </ul>
+              <li> Maximilian Golla (MPI-SP)</li>
+              <li> Philipp Markert (RUB)</li>
+              <li> Florian Farke (RUB) </li>
+              <li> Peter Mayer  (Uni. Southern Denmark)</li>
+              <li> Dominik Wermke (University of Hannover)</li>
             </ul>
           </div>
           <h3> Alumn/Past Members </h3>
@@ -501,6 +445,8 @@
 	    <li> <a href="https://wxyowen.github.io/">Xiaoyuan (Owen) Wu</a> (UG) <em>Now a PhD student at CMU</em></li>
 	    <li> Hunter Dyer <em>Now at Sandia National Labs</em></li>
 	    <li> Jinsuk Lee (MS)</li>
+            <li> Kayla Berne (UG)</li>
+            <li> Marlee Alvino (UG)</li>
           </ul>
 
         </div>
