adding new pubs

--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
         <div class="container news">
           <h4>News</h4>
           <ul>
+	    <li><span class="badge bg-secondary">Feb 2023</span>  David G. Balash, Rahel A. Fainchtein, Elena Korkes, Miles Grant, Micah Sherr, and Adam J. Aviv. have an accpeted paper at USENIX'23.</li>
+	    <li><span class="badge bg-secondary">Jan 2023</span> Peter Mayer, Yixin Zou, Bryon M. Lowens, Hunter A. Dyer, Khue Lee, Florian Schaub, and Adam J. Aviv. have an accpeted article at ToCHI.</li>
             <li><span class="badge bg-secondary">Oct 2022</span>  Rahel A. Fainchtein, Adam J. Aviv, and Micah Sherr have a new paper accepted at ACSAC'22.</li>
             <li><span class="badge bg-secondary">Oct 2022</span> Xiaoyuan Wu, Collins W. Munyendo, Eddie Cosic, Genevieve A. Flynn, Olivia Legault, and Adam J. Aviv have a new paper accepted at ACSAC'22.</li>
             <li><span class="badge bg-secondary">May 2022</span> Peter Mayer, Collins W. Munyendo, Michelle L. Mazurek,
@@ -568,13 +570,19 @@
         <h2>Publications </h2>
         <ul class="list-group">
 
-
+	  <li class="list-group-item" aria-disabled="true">
+	    David G. Balash, Rahel A. Fainchtein, Elena Korkes, Miles Grant, Micah Sherr, and Adam J. Aviv. Educators’ Perspectives of Using (or Not Using) Online Exam Proctoring. To appear at the 34th USENIX Security Symposium (USENIX Sec'23). Aug. 2023.
+	  </li>
+	  <li class="list-group-item" aria-disabled="true">
+Peter Mayer, Yixin Zou, Bryon M. Lowens, Hunter A. Dyer, Khue Lee, Florian Schaub, and Adam J. Aviv. Awareness, Intention, (In)Action: Individuals' Reactions to Data Breaches. To appear in ACM Transactions on Computer-Human Interaction. 
+	  </li>
+	  
           <li class="list-group-item" aria-disabled="true">
-            Rahel A. Fainchtein, Adam J. Aviv, and Micah Sherr. User Perceptions of the Privacy and Usability of Smart DNS. Annual Computer Security Applications Conference. (ACSAC'22). 2022.
+            Rahel A. Fainchtein, Adam J. Aviv, and Micah Sherr. <a href="https://dl.acm.org/doi/abs/10.1145/3564625.3567978">User Perceptions of the Privacy and Usability of Smart DNS</a>. Annual Computer Security Applications Conference. (ACSAC'22). 2022.
           </li>
 
           <li class="list-group-item" aria-disabled="true">
-            Xiaoyuan Wu, Collins W. Munyendo, Eddie Cosic, Genevieve A. Flynn, Olivia Legault, and Adam J. Aviv . Annual Computer Security Applications Conference. (ACSAC'22). 2022. 
+            Xiaoyuan Wu, Collins W. Munyendo, Eddie Cosic, Genevieve A. Flynn, Olivia Legault, and Adam J. Aviv. <a href="https://dl.acm.org/doi/abs/10.1145/3564625.3567981">User Perceptions of Five-Word Passwords</a>. Annual Computer Security Applications Conference. (ACSAC'22). 2022. 
           </li>
 
                     
