--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
         <div class="container news">
           <h4>News</h4>
           <ul>
+	    <li><span class="badge bg-secondary">May 2023</span> Collins Munyendo, Yasemin Acar, and Adam Aviv have an accepted paper at IEEE SP'23</li>
+
 	    <li><span class="badge bg-secondary">Feb 2023</span>  David G. Balash, Rahel A. Fainchtein, Elena Korkes, Miles Grant, Micah Sherr, and Adam J. Aviv. have an accpeted paper at USENIX'23.</li>
 	    <li><span class="badge bg-secondary">Jan 2023</span> Peter Mayer, Yixin Zou, Bryon M. Lowens, Hunter A. Dyer, Khue Lee, Florian Schaub, and Adam J. Aviv. have an accpeted article at ToCHI.</li>
             <li><span class="badge bg-secondary">Oct 2022</span>  Rahel A. Fainchtein, Adam J. Aviv, and Micah Sherr have a new paper accepted at ACSAC'22.</li>
@@ -268,17 +270,19 @@
               <br>
               <a href="https://adamaviv.com">Adam J. Aviv</a>
               <br>
-              Assoc. Prof.
+              Associat Professor
               <br>
-              <em>Co-Lab Director</em>
+              <em>Lab Director</em>
             </div>
             <div class="col-sm text-center">
               <img src="imgs/people/002_yasemin.jpg" width="200" alt="Yasmine Acar" class="img-thumbnail">
               <br>
               <a href="https://yaseminacar.de/">Yasemin Acar</a>
               <br>
-              Asst. Prof.
+              Professor, Paderborn University
               <br>
+	      Research Scientist at GW
+	      <br>
               <em>Co-Lab Director</em>
               <br>
             </div>
@@ -288,20 +292,13 @@
               <br>
               <a href="https://www.lucysimko.com/">Lucy Simko</a>
               <br>
-              Research Scientist / Postdoc
+              Research Scientist
+	      <br>
+	      Postdocoral Scholar
             </div>
           </div>
           <div class="row mt-2 mb-4">
             
-            <div class="col-sm text-center">
-              <img src="imgs/people/003_david.jpg" width="200" alt="David Balash" class="img-thumbnail">
-              <br>
-              <a href="https://davidbalash.github.io/">David Balash</a>
-              <br>
-              PhD Student
-              <br>
-            </div>
-
             <div class="col-sm text-center">
               <img src="imgs/people/005_collins.jpg" width="200" alt="Collins Munyendo" class="img-thumbnail">
               <br>
@@ -311,18 +308,18 @@
               <br>
             </div>
             <div class="col-sm text-center">
-              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Mindy Tran" class="img-thumbnail">
+              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Adryana Hutchinson" class="img-thumbnail">
               <br>
-              Mindy Tran
+              Adryana Hutchinson
               <br>
               PhD Student
               <br>
             </div>
 
             <div class="col-sm text-center">
-              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Harshini Sri Ramulu" class="img-thumbnail">
+              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Monica Kodwani" class="img-thumbnail">
               <br>
-              Harshini Sri Ramulu
+              Monica Kodwani
               <br>
               PhD Student
               <br>
@@ -340,14 +337,6 @@
             </div>
 
             <div class="col-sm text-center">
-              <img src="imgs/people/017_ruining.jpg" width="200" alt="Ruining Yang" class="img-thumbnail">
-              <br>
-              Ruining Yang
-              <br>
-              MS Student
-              <br>
-            </div>
-            <div class="col-sm text-center">
               <img src="imgs/people/006_irwin.jpg" width="200" alt="Irwin Reyes" class="img-thumbnail">
               <br>
               <a href="https://irwinreyes.com/">Irwin Reyes</a>
@@ -357,51 +346,22 @@
               <em>"Fixer"</em>
             </div>
 
-          </div>
 
-          <div class="row mt-2 mb-4">
-            <div class="col-sm text-center">
-              <img src="imgs/people/014_miles.jpg" width="200" alt="Miles Grant" class="img-thumbnail">
-              <br>
-              Miles Grant
-              <br>
-              Undergraduate
-              <br>
-            </div>
 
             <div class="col-sm text-center">
               <img src="imgs/people/016_elena.jpg" width="200" alt="Elena Korkes" class="img-thumbnail">
               <br>
               Elena Korkes
               <br>
-              Undergraduate
+              MS Student
               <br>
             </div>
+          </div>
+          <div class="row mt-2 mb-4">	  
             <div class="col-sm text-center">
               <img src="imgs/people/017_daniel.jpg" width="200" alt="Daniel Fisher" class="img-thumbnail">
               <br>
               Daniel Fisher
-              <br>
-              Undergraduate
-              <br>
-
-            </div>
-
-            <div class="col-sm text-center">
-              <img src="imgs/people/019_victoria.jpg" width="200" alt="Victoria Hennemann" class="img-thumbnail">
-              <br>
-              Victoria Hennemann
-              <br>
-              Undergraduate
-              <br>
-            </div>
-
-          </div>
-          <div class="row mt-2 mb-4">
-            <div class="col-sm text-center">
-              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Eddie Cossic" class="img-thumbnail">
-              <br>
-              Eddie Cossic
               <br>
               Undergraduate
               <br>
@@ -423,6 +383,22 @@
               Undergraduate
               <br>
             </div>
+          <div class="col-sm text-center">
+              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Evan Fries" class="img-thumbnail">
+              <br>
+              Evan Fries
+              <br>
+              Undergraduate
+              <br>
+            </div>
+          <div class="col-sm text-center">
+              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Alvan Isaac" class="img-thumbnail">
+              <br>
+              Alvin Isaacs
+              <br>
+              Undergraduate
+              <br>
+            </div>
 
           </div>
 
@@ -436,6 +412,8 @@
               <li> Florian Farke (RUB) </li>
               <li> Peter Mayer  (Uni. Southern Denmark)</li>
               <li> Dominik Wermke (University of Hannover)</li>
+	      <li> Mindy Tran (Paderborn)</li>
+	      <li> Harshinin Sriram (Paderborn)</li>
             </ul>
           </div>
           <h3> Alumn/Past Members </h3>
@@ -449,6 +427,11 @@
 	    <li> Jinsuk Lee (MS)</li>
             <li> Kayla Berne (UG)</li>
             <li> Marlee Alvino (UG)</li>
+	    <li> David Balash (PhD) (Now an assistant professor at University of Richomnd)</li>
+	    <li> Ruining Yang (MS) (now a PhD student at SUNY Stony Brook)</li>
+	    <li> Miles Grant (UG)</li>
+	    <li> Eddie Cosak (UG)</li>
+	    <li> Victoria Hennemann (UG) </li>
           </ul>
 
         </div>
@@ -458,22 +441,10 @@
         <a id="activities"></a>
         <h2>Activities</h2>
         <p>
-          The lab has a number of public activities that anyone is welcome to join. Attending a public event is a great way to meet people in the lab and potentially getting involved in
-          research.
+          The lab has a number of public activities that anyone is welcome to join. Attending a public event is a great way to meet people in the lab and potentially getting involved in research.
         </p>
         <ul>
-          <li><strong>Lab Meetings</strong>
-            <!-- <div class="badge bg-success">public</div> -->
-            <div class="badge bg-success"><em>virtual</em></div>
-            <p>
-              Lab Meetings are times for practice talks, brain storming, project feedback, pictionary, and more. This is a weekly
-              <strong>public</strong> event. 
-            </p>
-            <p>
-            <ul>
-              <li><span class="badge bg-danger">Spring'23</span> Wednesday 1200pm-100pm (email Prof. Aviv to receive an invite)</li>
-            </ul>
-            </p>
+          <li><div class="badge bg-success"><em>Activities for Fall'23 TBD</em></div>
           </li>
           <!--
                     <li><strong>Lab Scrum Meetings</strong>
@@ -487,18 +458,6 @@
                         </p>
                     </li>
                     -->
-          <li><strong>Brown Bag Lunch</strong>
-            <!-- <div class="badge bg-success">public</div> -->
-            <div class="badge bg-success"><em>in-person</em></div>
-            <p>
-              We meet informally on Thursdays to eat lunch together and chat, about whatever.
-            </p>
-            <p>
-            <ul>
-              <li><span class="badge bg-danger">Spring'23</span> Thursday 1200pm-100pm -- GWUSEC Lab in SEH</li>
-            </ul>
-            </p>
-          </li>
         </ul>
       </div>
       <div class="container join content">
@@ -571,7 +530,10 @@
         <ul class="list-group">
 
 	  <li class="list-group-item" aria-disabled="true">
-	    David G. Balash, Rahel A. Fainchtein, Elena Korkes, Miles Grant, Micah Sherr, and Adam J. Aviv. Educators’ Perspectives of Using (or Not Using) Online Exam Proctoring. To appear at the 34th USENIX Security Symposium (USENIX Sec'23). Aug. 2023.
+	    Collins Munyendo, Yasemin Acar, and Adam J. Aviv. "In Eighty Percent of the Cases, I Select the Password for Them": Security and Privacy Challenges, Advice, and Opportunities at Cybercafes in Kenya. In the proceedings of the IEEE Security and Privacy Smposium (IEEE SP23). May. 2023.
+	  </li>
+	  <li class="list-group-item" aria-disabled="true">
+	    David G. Balash, Rahel A. Fainchtein, Elena Korkes, Miles Grant, Micah Sherr, and Adam J. Aviv. <a href="https://www.usenix.org/conference/usenixsecurity23/presentation/balash">Educators’ Perspectives of Using (or Not Using) Online Exam Proctoring</a>. In the proceedings of the 34th USENIX Security Symposium (USENIX Sec'23). Aug. 2023.
 	  </li>
 	  <li class="list-group-item" aria-disabled="true">
 Peter Mayer, Yixin Zou, Bryon M. Lowens, Hunter A. Dyer, Khue Lee, Florian Schaub, and Adam J. Aviv. Awareness, Intention, (In)Action: Individuals' Reactions to Data Breaches. To appear in ACM Transactions on Computer-Human Interaction. 
