updating the images and links for adryana

--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@
               <br>
             </div>
             <div class="col-sm text-center">
-              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Adryana Hutchinson" class="img-thumbnail">
+              <img src="imgs/people/023_adryana.jpg" width="200" alt="Adryana Hutchinson" class="img-thumbnail">
               <br>
-              Adryana Hutchinson
+              <a href="https://a-wyrm.github.io/home/">Adryana Hutchinson</a>
               <br>
               PhD Student
               <br>
