--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             </div>
 
             <div class="col-sm text-center">
-              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Monica Kodwani" class="img-thumbnail">
+              <img src="imgs/people/024_monica.jpg" width="200" alt="Monica Kodwani" class="img-thumbnail">
               <br>
               Monica Kodwani
               <br>
