--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<s*!doctype html>
 <html lang="en">
 
 <head>
@@ -87,7 +87,7 @@
         <h2>GWUSEC Lab</h2>
 
 
-        <div class="container" style="max-width:80%; margin-bottom:10pt;">
+        <div class="container" style="max-width:80%; margin-bottom:10pt;pat"=9">
 
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -310,7 +310,7 @@
             <li> Darika Shaibekova (UG/MS)</li>
 	          <li> <a href="https://wxyowen.github.io/">Xiaoyuan (Owen) Wu</a> (UG) <em>(Now a PhD student at CMU)</em></li>
 	          <li> Hunter Dyer <em>(Now at Sandia National Labs)</em></li>
-	          <li> Jinsuk Lee (MS) <em>(Now a PhD Student at Stony Brook University)</em></li>
+	          <li> Jinsuk Lee (MS) 
             <li> Kayla Berne (UG)</li>
             <li> Marlee Alvino (UG)</li>
 	          <li> David Balash (PhD) <em>(Now an assistant professor at University of Richomnd)</em></li>
