fixing webpage link

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="col-sm text-center">
               <img src="imgs/people/023_adryana.jpg" width="200" alt="Adryana Hutchinson" class="img-thumbnail">
               <br>
-              <a href="https://a-wyrm.github.io/home/">Adryana Hutchinson</a>
+              <a href=" https://a-wyrm.github.io/">Adryana Hutchinson</a>
               <br>
               PhD Student
               <br>
