--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <br>
               <a href="https://adamaviv.com">Adam J. Aviv</a>
               <br>
-              Associat Professor
+              Associate Professor
               <br>
               <em>Lab Director</em>
             </div>
@@ -188,14 +188,14 @@
               <br>
               Research Scientist
 	            <br>
-	            Postdocoral Scholar
+	            Postdoctoral Scholar
             </div>
             <div class="col-sm text-center">
               <img src="imgs/people/025_jan.jpg" style="object-fit: cover; width=200px; height:200px" alt="Jan Tolsdorf" class="img-thumbnail">
               <br>
               Jan Tolsdorf</a>
               <br>
-	            Postdocoral Scholar
+	            Postdoctoral Scholar
             </div>
           </div>
           <div class="row mt-2 mb-4">
