updating lab page

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
             <a class="nav-link" href="#people">People</a>
           </li>
           <!-- <li class="nav-item">
-            <a class="nav-link" href="#activities">Activities</a>
           </li> -->
           <li class="nav-item">
+            <a class="nav-link" href="#activities">Activities</a>
+            </li>
+            <li>
             <a class="nav-link" href="#join">Join the lab!</a>
           </li>
           <li class="nav-item">
@@ -73,6 +75,12 @@
             github.com/gwusec
           </a>
         </div>
+        <div class="col-sm">
+          <a href="https:/tiktok.com/@gwusec">
+            <img src="imgs/icons/tiktok.svg" alt="TikTok icon"><br>
+            @gwusec
+          </a>          
+        </div>
       </div>
       <div class="row mt-3">
         <div class="col-sm">
@@ -82,12 +90,19 @@
       </div>
     </div>
 
+    
+
     <div class="container-fluid main">
+
+      <div class="container alert alert-danger mt-3 mb-3 mx-auto text-center ">
+        <strong>Notice:</strong> We are currently recruiting for a study on TikTok using the lab account <a href="https://tiktok.com/@gwusec">@gwusec</a>
+      </div>
+
       <div class="container about content">
         <h2>GWUSEC Lab</h2>
 
 
-        <div class="container" style="max-width:80%; margin-bottom:10pt;pat"=9">
+        <div class="container" style="max-width:80%; margin-bottom:10pt;pa"t=9">
 
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -418,6 +433,14 @@
         <a id="pubs"></a>
         <h2>Publications </h2>
         <ul class="list-group">
+
+          <li class="list-group-item" aria-disabled="true">
+            Adryana Hutchinson, Collins W. Munyendo, Peter Mayer, and Adam J. Aviv. An Analysis of Password Managers' Password Checkup Tools. ACM CHI Extended Abstracts 2024. 
+          </li>
+
+          <li class="list-group-item" aria-disabled="true">
+            Adryana Hutchinson, Jinwei Tang, Adam J. Aviv, and Peter Story. Measuring the Prevalence of Password Manager Issues Using In-Situ Experiments. Symposium on Usable Security and Privacy (USEC) 2024. 
+          </li>
           <li class="list-group-item" aria-disabled="true">
           Florian M. Farke, David G. Balash, Maximilian Golla and Adam J. Aviv. <a href="https://arxiv.org/abs/2312.13813">How Does Connecting Online Activities to Advertising Inferences Impact Privacy Perceptions?</a>. Proceedings of Privacy Enhancing Technologies (PoPETs). 2024. 
           </li>
