--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <div class="col-sm text-center">
               <img src="imgs/people/025_jan.jpg" style="object-fit: cover; width=200px; height:200px" alt="Jan Tolsdorf" class="img-thumbnail">
               <br>
-              Jan Tolsdorf</a>
+              <a href="https://jantolsdorf.de/"> Jan Tolsdorf</a>
               <br>
 	            Postdoctoral Scholar
             </div>
