--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
               <div class="container external-lab">
                 <h3>Current and Former External Lab Collaborations</h3>
                 <ul>
-                  <li> <a href="https://irwinreyes.com/">Irwin Reyes</a></li>
+                  <li> Irwin Reyes</li>
                   <li> Maximilian Golla (MPI-SP)</li>
                   <li> Philipp Markert (RUB)</li>
                   <li> Florian Farke (RUB) </li>
@@ -314,7 +314,7 @@
                 <li> Tim Forman (USNA/UG) </li>
                 <li> James Levy (MS)</li>
                 <li> Darika Shaibekova (UG/MS)</li>
-                <li> <a href="https://wxyowen.github.io/">Xiaoyuan (Owen) Wu</a> (UG) <em>(Now a PhD student at
+                <li> Xiaoyuan (Owen) Wu (UG) <em>(Now a PhD student at
                     CMU)</em></li>
                 <li> Hunter Dyer <em>(Now at Sandia National Labs)</em></li>
                 <li> Jinsuk Lee (MS)
@@ -331,6 +331,7 @@
                 <li> Viraj Prakash (UG)</li>
                 <li> Tanim Khan</li>
                 <li> Elena Korkes (UG/MS)</li>
+                <li> Lucy Simko (PostDoc) <em>(Now an assistant professor at Barnard College)</em></li>
               </ul>
               </div>
             </div>
