--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 <h3>Current and Former External Lab Collaborations</h3>
                 <ul>
                   <li> Irwin Reyes</li>
-                  <li> Maximilian Golla (MPI-SP)</li>
+                  <li> Maximilian Golla (CISPA)</li>
                   <li> Philipp Markert (RUB)</li>
                   <li> Florian Farke (RUB) </li>
                   <li> Peter Mayer (Uni. Southern Denmark)</li>
