Adding a new photo

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                       alt="GWUSEC Lab Group at USENIX  Security,  August 2022">                
                 </div>              
                 <div class="carousel-item">
-                  <img src="imgs/GWUSEC_USENIX_peter_pres_2022.jpg" class="d-block w-100"
-                    alt="Peter Mayer presenting at  USENIX Security, August 2022">
+                  <img src="imgs/GWUSEC_cityview.jpg" class="d-block w-100"
+                    alt="GWUSEC Lab Memmbers at the City View Room">
                 </div>
                 <div class="carousel-item">
                   <img src="imgs/GWUSEC_USENIX_collins_pres_2022.jpg" class="d-block w-100"
