--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <div class="col-sm text-center">
                   <img src="imgs/people/000_placeholder.jpg" width="200" alt="Tanim Khan" class="img-thumbnail">
                   <br>
-                  Ilinca Hirtopanu
+                  Joe Staller
                   <br>
                   Undergraduate
                   <br>
@@ -322,6 +322,7 @@
                 <li> Tanim Khan</li>
                 <li> Elena Korkes (UG/MS)</li>
                 <li> Lucy Simko (PostDoc) <em>(Now an assistant professor at Barnard College)</em></li>
+                <li>Ilinca Hirtopanu</li>
               </ul>
               </div>
             </div>
