Fixing some minor things

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <img src="imgs/people/029_smirity.jpg" style="object-fit: cover; width=200px; height:200px"
                   alt="Smirity Kaushik" class="img-thumbnail">
                 <br>
-                <a href="https://smiritykaushik.com/"> Smirity Kaushik</a>
+                <a href="https://smiritykaushik.github.io/"> Smirity Kaushik</a>
                 <br>
                 Postdoctoral Scholar
               </div>
@@ -212,7 +212,7 @@
                 <a href="https://shizaali.com/"> Shiza Ali</a>
                 <br>
                 Postdoctoral Scholar<br>
-                <em>Co-Mentored with Dr. Rebecca Hwa</em>
+                <em>Co-Mentored with Rebecca Hwa</em>
               </div>
               <div class="row mt-2 mb-4">
                 <div class="col-sm text-center">
@@ -314,13 +314,14 @@
             <div class="container external-lab">
               <h3>Current and Former External Lab Collaborations</h3>
               <ul>
+                <li> Michelle Mazurek (UMD)</li>
                 <li> Irwin Reyes</li>
                 <li> Maximilian Golla (MPI-SP)</li>
                 <li> Philipp Markert (RUB)</li>
                 <li> Florian Farke (RUB) </li>
                 <li> Peter Mayer (Uni. Southern Denmark)</li>
                 <li> Dominik Wermke (University of Hannover)</li>
-                <li> Mindy Tran (Paderborn)</li>
+                <li> Mindy Tran (MPI-SP)</li>
                 <li> Harshinin Sriram (Paderborn)</li>
                 <li> Masood Ali (UIC)</li>
                 <li> Yasmin Acar (Paderborn)</li>
@@ -336,11 +337,11 @@
                 <li> Darika Shaibekova (UG/MS)</li>
                 <li> Xiaoyuan (Owen) Wu (UG) <em>(Now a PhD student at
                     CMU)</em></li>
-                <li> Hunter Dyer <em>(Now at Sandia National Labs)</em></li>
+                <li> Hunter Dyer <em>(Now at Microsoft)</em></li>
                 <li> Jinsuk Lee (MS)
                 <li> Kayla Berne (UG)</li>
                 <li> Marlee Alvino (UG)</li>
-                <li> David Balash (PhD) <em>(Now an assistant professor at University of Richmond)</em></li>
+                <li> David Balash (PhD) </li>
                 <li> Ruining Yang (MS) <em>(Now a PhD student at SUNY Stony Brook)</em></li>
                 <li> Miles Grant (UG)</li>
                 <li> Eddie Cosak (UG)</li>
