Adding one more photo

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     alt="GWUSEC Lab Group Photo at CCS 2023">
                 </div>
                 <div class="carousel-item">
-                  <img src="imgs/GWSUEC_USENIX_group_photo_2022.jpg" class="d-block w-100"
-                    alt="GWUSEC Lab Group at USENIX  Security,  August 2022">
+                  <img src="imgs/GWUSEC_SOUPS_2025.jpg" class="d-block w-100"
+                    alt="GWUSEC Lab Members at SOUPS, August 2025">
                 </div>
                 <div class="carousel-item">
                   <img src="imgs/GWUSEC_cityview.jpg" class="d-block w-100"
