updating arwa photo

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                   <br>
                 </div>
                 <div class="col-sm text-center">
-                  <img src="imgs/people/028_arwa.jpg" width="200" alt="Rachel Gonzalez Rodriguez" class="img-thumbnail">
+                  <img src="imgs/people/028_arwa.jpg" style="object-fit: cover; width:200px; height:200px" alt="Arwa Alshadi" class="img-thumbnail">
                   <br>
                   Arwa Alshadi
                   <br>
