--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <h3> Ongoing Research Recruitment Notice </h3>
 
           <p> We are currently conducting recruitment for a research study entitled "Key Factors Influencing Developers'
-            Decisions to Change App Labels." If you are an app developer whose app has underwent some changes in the
+            Decisions to Change App Labels." If you are an app developer whose app did not undergo changes in the
             last two years, you might have received an email from our lab using the email address gwusec@email.gwu.edu
             for you to answer a few questions. This notice is to ensure you that this is an approved research student
             (GWU IRB # NCR246154). You can view the <a href="key_factors_informed_consent.pdf">informed
